objects/cic_credit__Credit_Report__c.object
<CustomObject>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Credit Reports</relationshipLabel>
        <relationshipName>Credit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Bureaus__c</fullName>
        <formula>IF ( INCLUDES (  cic_credit__Credit_Application__r.cic_credit__Credit_Bureaus__c  , &quot;Equifax&quot; ), &quot;Equifax; &quot;,null ) &amp;
IF ( INCLUDES ( cic_credit__Credit_Application__r.cic_credit__Credit_Bureaus__c , &quot;Experian&quot; ), &quot;Experian; &quot;,null ) &amp;
IF ( INCLUDES ( cic_credit__Credit_Application__r.cic_credit__Credit_Bureaus__c , &quot;Transunion&quot; ), &quot;Transunion; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Bureaus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Adverse_Action__c</fullName>
        <label>Adverse Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cic_credit__Borrower_Type__c</fullName>
        <label>Borrower Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Co-borrower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Closed_Tradelines__c</fullName>
        <label>Closed Tradelines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__Collections__c</fullName>
        <label>Collections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credit Reports</relationshipLabel>
        <relationshipName>Credit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cic_credit__Credit_Application__c</fullName>
        <label>Credit Application</label>
        <referenceTo>cic_credit__Credit_Application__c</referenceTo>
        <relationshipLabel>Credit Reports</relationshipLabel>
        <relationshipName>Credit_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cic_credit__Credit_Bureau__c</fullName>
        <label>Credit Bureau</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>cic_credit__Credit_Bureaus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Credit_Pull_Type__c</fullName>
        <label>Credit Pull Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hard</fullName>
                </value>
                <value>
                    <fullName>Soft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cic_credit__Inquiries__c</fullName>
        <label>Inquiries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__Last_Updated_Date__c</fullName>
        <description>creditReportLastUpdatedDate</description>
        <label>Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cic_credit__Merge_Type__c</fullName>
        <description>creditReportMergeType</description>
        <label>Merge Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Messages__c</fullName>
        <label>Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cic_credit__Open_Tradelines__c</fullName>
        <label>Open Tradelines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credit Reports</relationshipLabel>
        <relationshipName>Credit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cic_credit__Public_Records__c</fullName>
        <label>Public Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__Rating_Code_Type__c</fullName>
        <description>creditRatingCodeType</description>
        <label>Rating Code Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Report_Date__c</fullName>
        <label>Report Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cic_credit__Report_First_Issued_Date__c</fullName>
        <description>creditReportFirstIssuedDate</description>
        <label>Report First Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cic_credit__Report_Identifier__c</fullName>
        <description>creditReportIdentifier</description>
        <label>Report Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Report_Type__c</fullName>
        <description>creditReportType</description>
        <label>Report Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cic_credit__Score__c</fullName>
        <label>Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cic_credit__Scorecard__c</fullName>
        <label>Scorecard</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Credit Report</label>
    <listViews>
        <fullName>cic_credit__All</fullName>
        <columns>NAME</columns>
        <columns>cic_credit__Score__c</columns>
        <columns>cic_credit__Report_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>Credit Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>